Fix z-index and opacity for overlay in mobile menu
- Changed z-index of overlay to 999 for proper stacking context.
- Set opacity of overlay to 0 when the menu is open to ensure it is hidden.

--- a/Exam-02/assets/css/style.scss
+++ b/Exam-02/assets/css/style.scss
@@ -130,7 +130,7 @@ h2 {
   width: 100%;
   height: calc(100dvh - 60px);
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 1000;
+  z-index: 999;
   -webkit-transition: all .5s ease;
   -o-transition: all .5s ease;
   transition: all .5s ease;
@@ -169,7 +169,7 @@ h2 {
 .open-menu {
   .overlay-mm {
     visibility: visible;
-    opacity: 1;
+    opacity: 0;
   }
 
   .mobile-menu-panel {
